# opx-sdi-sys-vm

./: .gitreview  Makefile.am  README.md  configure.ac
debian/: changelog  control  libopx-sdi-sys-vm1.install
inc/: Makefile.am
inc/opx/: sdi_db.h  sdi_db_config.h  sdi_sys_vm.h  sdi_vm_sys_init.h
scripts/: Makefile
scripts/lib/python/: sdi_vm_cmdline.py  sdi_vm_common.py  sdi_vm_common_consts.py  sdi_vm_db_ops.py  sdi_vm_interactive.py
scripts/tests/: sdi_vm_plat_unittest.py
src/: sdi_db_ops.c  sdi_vm_entity.c  sdi_vm_fan.c  sdi_vm_led.c  sdi_vm_media.c  sdi_vm_nvram.c  sdi_vm_sys.c  sdi_vm_thermal.c
src/unit_test/: sdi_vm_entity_info_unittest.cpp  sdi_vm_fan_unittest.cpp  sdi_vm_led_unittest.cpp  sdi_vm_media_unittest.cpp  sdi_vm_thermal_unittest.cpp
src/unit_test/tests/: sdi_run_tests.sh
